# App-BrainAmpSeries

./: .appveyor.yml  .gitignore  BrainAmpSeries.cfg  CMakeLists.txt  Downsampler.h  LICENSE.txt  Packaging.cmake  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  release_notes.txt  using_exg_sensors.txt
.github/workflows/: cppcmake.yml
